--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "klava",
   "version": "0.1.0",
   "private": true,
- 
   "dependencies": {
+    "chart.js": "^2.8.0",
     "react": "^16.9.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
     "sinon": "^7.4.1"
